# dml-data-platform

./: .gitignore  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
dml-dbt/: pyproject.toml
dml-dbt/dml_dbt_platform/: .user.yml  dbt_project.yml  profiles.yml
dml-dbt/dml_dbt_platform/models/marts/: schema.yml  taxi_daily_metrics.sql  taxi_hourly_metrics.sql  taxi_payment_type_analysis.sql
dml-dbt/dml_dbt_platform/models/staging/: schema.yml  stg_nyc_taxi_trips.sql
dml-orchestrator/: README.md  dagster.yaml  pyproject.toml
dml-orchestrator/src/dml_orchestrator/: definitions.py
dml-orchestrator/src/dml_orchestrator/defs/: __init__.py
dml-orchestrator/src/dml_orchestrator/defs/assets/: __init__.py  nyc_taxi_pipeline.py  test_dbt.py  test_minio.py
dml-orchestrator/src/dml_orchestrator/defs/football/: asset_checks.py  config.py  ingestion.py  models.py  partitions.py  validation.py
dml-orchestrator/src/dml_orchestrator/defs/football/asset_checks/: raw_data_checks.py  raw_player_data_checks.py  raw_teams_data_checks.py
dml-orchestrator/src/dml_orchestrator/defs/football/asset_checks/data_contracts/: matches_schema_v1.yaml  player_match_stats_schame_v1.yaml  player_schema.yaml  player_stats_schema_v1.yaml  team_schema.yaml
dml-orchestrator/src/dml_orchestrator/defs/resources/: __init__.py  dbt.py  io_manager.py  minio.py
dml-orchestrator/src/dml_orchestrator/defs/utils/: csv_checks.py  ingest_csv.py  parquet.py  validate_csv.py
dml-orchestrator/tests/football/: test_raw_players_asset.py  test_validated_players_asset.py  test_validated_teams_asset.py
dml-orchestrator/tests/utils/: test_get_csv.py
docker/dev/dagster/: Dockerfile
