[project]
name = "dml_orchestrator"
requires-python = ">=3.10,<3.14"
version = "0.1.0"
dependencies = ["dagster==1.12.2"]

[dependency-groups]
dev = ["dagster-webserver", "dagster-dg-cli"]
docker = [
    "dagster-docker>=0.28.2",
    "dagster-graphql>=1.12.2",
    "dagster-postgres>=0.28.2",
    "dagster-webserver>=1.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dml_orchestrator"
registry_modules = ["dml_orchestrator.components.*"]
